--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
                 </div>
             </div>
             <div class="row">
+                <p class="security-seal"><span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=2Agi8UYfANmrQHX3X6CN3e4pKZcDEj2fLKWZ6QNHg4ISgM9EJHAYQYpRCfmf"></script></span></p>
                 <p>
                     Copyright &copy; 2020 by Omnifood. All rights reserved.
                 </p>
@@ -425,6 +426,17 @@
     <script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
     <script src="vendors/js/jquery.waypoints.min.js"></script>
     <script src="resources/js/script.js"></script>
+        
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89684778-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-89684778-2');
+    </script>
+
 
     </body>
 
